@@ -19,6 +19,12 @@
  */
 package mServer.crawler.sender;
 
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.concurrent.TimeUnit;
+import org.apache.commons.lang3.StringEscapeUtils;
 import de.mediathekview.mlib.Config;
 import de.mediathekview.mlib.Const;
 import de.mediathekview.mlib.daten.Film;
@@ -29,13 +35,6 @@ import mServer.crawler.CrawlerTool;
 import mServer.crawler.FilmeSuchen;
 import mServer.crawler.GetUrl;
 import mServer.tool.MserverDaten;
-import org.apache.commons.lang3.StringEscapeUtils;
-
-import java.net.URI;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.concurrent.TimeUnit;
 
 public class MediathekSwr extends MediathekReader
 {
@@ -45,60 +44,64 @@ public class MediathekSwr extends MediathekReader
 
     public final static Sender SENDER = Sender.SWR;
 
-    public MediathekSwr(FilmeSuchen ssearch, int startPrio)
+    public MediathekSwr(final FilmeSuchen ssearch, final int startPrio)
     {
         super(ssearch, SENDER.getName(), /* threads */ 2, /* urlWarten */ wartenLang, startPrio);
     }
 
-    //===================================
+    // ===================================
     // public
-    //===================================
+    // ===================================
     @Override
     public synchronized void addToList()
     {
         meldungStart();
-        //Theman suchen
+        // Theman suchen
         listeThemen.clear();
         addToList__();
         if (CrawlerTool.loadLongMax())
         {
-            addToList_verpasst(); // brauchst eigentlich nicht und dauer zu lange
+            addToList_verpasst(); // brauchst eigentlich nicht und dauer zu
+                                  // lange
         }
         if (Config.getStop())
         {
             meldungThreadUndFertig();
-        } else if (listeThemen.isEmpty())
+        }
+        else if (listeThemen.isEmpty())
         {
             meldungThreadUndFertig();
-        } else
+        }
+        else
         {
             meldungAddMax(listeThemen.size());
             for (int t = 0; t < getMaxThreadLaufen(); ++t)
             {
-                Thread th = new ThemaLaden();
+                final Thread th = new ThemaLaden();
                 th.setName(SENDER.getName() + t);
                 th.start();
             }
         }
     }
 
-    //===================================
+    // ===================================
     // private
-    //===================================
+    // ===================================
     private void addToList__()
     {
-        //Theman suchen
+        // Theman suchen
         final String MUSTER_START = "<div class=\"mediaCon\">";
         final String MUSTER_STOPP = "<h2 class=\"rasterHeadline\">OFT GESUCHT</h2>";
         final String MUSTER_URL = "<a href=\"tvshow.htm?show=";
         final String MUSTER_THEMA = "title=\"";
         MSStringBuilder strSeite = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-        strSeite = getUrlIo.getUriWithDelay(SENDER.getName(), "http://swrmediathek.de/tvlist.htm", StandardCharsets.UTF_8, 2, strSeite, "", 4, TimeUnit.SECONDS);
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        strSeite = getUrlIo.getUriWithDelay(SENDER.getName(), "http://swrmediathek.de/tvlist.htm",
+                StandardCharsets.UTF_8, 2, strSeite, "", 4, TimeUnit.SECONDS);
         int pos = 0;
         String url;
         String thema;
-        int stop = strSeite.indexOf(MUSTER_STOPP);
+        final int stop = strSeite.indexOf(MUSTER_STOPP);
         while (!Config.getStop() && (pos = strSeite.indexOf(MUSTER_START, pos)) != -1)
         {
             if (stop > 0 && pos > stop)
@@ -108,7 +111,12 @@ public class MediathekSwr extends MediathekReader
             pos += MUSTER_START.length();
             url = strSeite.extract(MUSTER_URL, "\"", pos);
             thema = strSeite.extract(MUSTER_THEMA, "\"", pos);
-            thema = StringEscapeUtils.unescapeHtml4(thema.trim()); //wird gleich benutzt und muss dann schon stimmen
+            thema = StringEscapeUtils.unescapeHtml4(thema.trim()); // wird
+                                                                   // gleich
+                                                                   // benutzt
+                                                                   // und muss
+                                                                   // dann schon
+                                                                   // stimmen
             if (thema.isEmpty())
             {
                 Log.errorLog(915263078, "kein Thema");
@@ -116,10 +124,12 @@ public class MediathekSwr extends MediathekReader
             if (url.isEmpty())
             {
                 Log.errorLog(163255009, "keine URL");
-            } else
+            }
+            else
             {
-                //url = url.replace("&amp;", "&");
-                String[] add = new String[]{"http://swrmediathek.de/tvshow.htm?show=" + url, thema};
+                // url = url.replace("&amp;", "&");
+                final String[] add = new String[]
+                { "http://swrmediathek.de/tvshow.htm?show=" + url, thema };
                 listeThemen.add(add);
             }
         }
@@ -127,17 +137,20 @@ public class MediathekSwr extends MediathekReader
 
     private void addToList_verpasst()
     {
-        //Theman suchen
+        // Theman suchen
         MSStringBuilder strSeite = new MSStringBuilder(Const.STRING_BUFFER_START_BUFFER);
-        GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
-        strSeite = getUrlIo.getUriWithDelay(SENDER.getName(), "http://swrmediathek.de/sendungverpasst.htm", StandardCharsets.UTF_8, 2, strSeite, "", 4, TimeUnit.SECONDS);
-        ArrayList<String> list = new ArrayList<>();
+        final GetUrl getUrlIo = new GetUrl(getWartenSeiteLaden());
+        strSeite = getUrlIo.getUriWithDelay(SENDER.getName(), "http://swrmediathek.de/sendungverpasst.htm",
+                StandardCharsets.UTF_8, 2, strSeite, "", 4, TimeUnit.SECONDS);
+        final ArrayList<String> list = new ArrayList<>();
         strSeite.extractList("<ul class=\"progChannelList\" tabindex=\"-1\">", "<div class=\"box mediBoxBorder\"",
-                "<a href=\"sendungverpasst.htm?show=&date=", "\"", "http://www.swrmediathek.de/sendungverpasst.htm?show=&date=", list);
-        for (String s : list)
+                "<a href=\"sendungverpasst.htm?show=&date=", "\"",
+                "http://www.swrmediathek.de/sendungverpasst.htm?show=&date=", list);
+        for (final String s : list)
         {
-            //url = url.replace("&amp;", "&");
-            String[] add = new String[]{s, ""};
+            // url = url.replace("&amp;", "&");
+            final String[] add = new String[]
+            { s, "" };
             listeThemen.add(add);
         }
     }
@@ -167,18 +180,21 @@ public class MediathekSwr extends MediathekReader
                     themenSeitenSuchen(thema[0] /* url */, thema[1] /* Thema */);
                     meldungProgress(thema[0]);
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(739285690, ex);
             }
             meldungThreadUndFertig();
         }
 
-        private void themenSeitenSuchen(String strUrlFeed, String thema)
+        private void themenSeitenSuchen(final String strUrlFeed, final String thema)
         {
             final String MUSTER_URL = "<a href=\"/player.htm?show=";
-            //strSeite1 = getUrl.getUri_Utf(nameSenderMReader, strUrlFeed, strSeite1, thema);
-            strSeite1 = getUrlThemaLaden.getUriWithDelay(SENDER.getName(), strUrlFeed, StandardCharsets.UTF_8, 2 /* versuche */, strSeite1, thema, 4, TimeUnit.SECONDS);
+            // strSeite1 = getUrl.getUri_Utf(nameSenderMReader, strUrlFeed,
+            // strSeite1, thema);
+            strSeite1 = getUrlThemaLaden.getUriWithDelay(SENDER.getName(), strUrlFeed, StandardCharsets.UTF_8,
+                    2 /* versuche */, strSeite1, thema, 4, TimeUnit.SECONDS);
             if (strSeite1.length() == 0)
             {
                 Log.errorLog(945120365, "Seite leer: " + strUrlFeed);
@@ -199,7 +215,8 @@ public class MediathekSwr extends MediathekReader
                     {
                         break;
                     }
-                } else
+                }
+                else
                 {
                     ++max;
                     if (max > 20)
@@ -218,14 +235,16 @@ public class MediathekSwr extends MediathekReader
                             --max;
                         }
                         continue;
-                    } else
+                    }
+                    else
                     {
                         gefunden.add(url);
                     }
                     if (url.isEmpty())
                     {
                         Log.errorLog(875012369, "keine URL, Thema: " + thema);
-                    } else
+                    }
+                    else
                     {
                         url = "http://swrmediathek.de/AjaxEntry?callback=jsonp1347979401564&ekey=" + url;
                         json(strUrlFeed, thema, url);
@@ -236,33 +255,37 @@ public class MediathekSwr extends MediathekReader
             gefunden.clear();
         }
 
-        private void json(String strUrlFeed, String thema, String urlJson)
+        private void json(final String strUrlFeed, String thema, final String urlJson)
         {
-            //:"entry_media","attr":{"val0":"h264","val1":"3","val2":"rtmp://fc-ondemand.swr.de/a4332/e6/swr-fernsehen/landesschau-rp/aktuell/2012/11/582111.l.mp4",
+            // :"entry_media","attr":{"val0":"h264","val1":"3","val2":"rtmp://fc-ondemand.swr.de/a4332/e6/swr-fernsehen/landesschau-rp/aktuell/2012/11/582111.l.mp4",
             // oder
             // "entry_media":"http://mp4-download.swr.de/swr-fernsehen/zur-sache-baden-wuerttemberg/das-letzte-wort-podcast/20120913-2015.m.mp4"
             // oder
             // :"entry_media","attr":{"val0":"flashmedia","val1":"1","val2":"rtmp://fc-ondemand.swr.de/a4332/e6/swr-fernsehen/eisenbahn-romantik/381104.s.flv","val3":"rtmp://fc-ondemand.swr.de/a4332/e6/"},"sub":[]},{"name":"entry_media","attr":{"val0":"flashmedia","val1":"2","val2":"rtmp://fc-ondemand.swr.de/a4332/e6/swr-fernsehen/eisenbahn-romantik/381104.m.flv","val3":"rtmp://fc-ondemand.swr.de/a4332/e6/"},"sub":[]
-            // "entry_title":"\"Troika-Tragödie - Verspielt die Regierung unser Steuergeld?\"
+            // "entry_title":"\"Troika-Tragödie - Verspielt die Regierung unser
+            // Steuergeld?\"
             try
             {
-                strSeite2 = getUrlThemaLaden.getUriWithDelay(SENDER.getName(), urlJson, StandardCharsets.UTF_8, 1, strSeite2, "", 4, TimeUnit.SECONDS);
+                strSeite2 = getUrlThemaLaden.getUriWithDelay(SENDER.getName(), urlJson, StandardCharsets.UTF_8, 1,
+                        strSeite2, "", 4, TimeUnit.SECONDS);
                 if (strSeite2.length() == 0)
                 {
                     if (MserverDaten.debug)
+                    {
                         Log.errorLog(912365478, "Seite leer: " + urlJson);
+                    }
                     return;
                 }
-                String title = getTitle();
-                String date = getDate();
-                String time = getTime();
-                String description = getDescription();
-                long duration = getDuration();
-                String urldHd = getHDUrl();
+                final String title = getTitle();
+                final String date = getDate();
+                final String time = getTime();
+                final String description = getDescription();
+                final long duration = getDuration();
+                final String urldHd = getHDUrl();
                 String normalUrl = getNormalUrl();
                 String smallUrl = getSmallUrl();
-                String rtmpUrl = getRtmpUrl();
-                String subtitle = strSeite2.extract("\"entry_capuri\":\"", "\"");
+                final String rtmpUrl = getRtmpUrl();
+                final String subtitle = strSeite2.extract("\"entry_capuri\":\"", "\"");
                 if (thema.isEmpty())
                 {
                     thema = strSeite2.extract("\"group_title\":\"", "\"");
@@ -270,12 +293,14 @@ public class MediathekSwr extends MediathekReader
                 if (normalUrl.isEmpty() && smallUrl.isEmpty() && rtmpUrl.isEmpty())
                 {
                     Log.errorLog(203690478, thema + " NO normal and small url:  " + urlJson);
-                } else
+                }
+                else
                 {
                     if (normalUrl.isEmpty() && !smallUrl.isEmpty())
                     {
                         normalUrl = smallUrl;
-                    } else if (normalUrl.isEmpty())
+                    }
+                    else if (normalUrl.isEmpty())
                     {
                         normalUrl = rtmpUrl;
                     }
@@ -283,24 +308,16 @@ public class MediathekSwr extends MediathekReader
                     {
                         smallUrl = getSuperSmalUrl();
                     }
-                    Film film = CrawlerTool.createFilm(SENDER,
-                            normalUrl,
-                            title,
-                            thema,
-                            date,
-                            time,
-                            duration,
-                            strUrlFeed,
-                            description,
-                            urldHd,
-                            smallUrl);
+                    final Film film = CrawlerTool.createFilm(SENDER, normalUrl, title, thema, date, time, duration,
+                            strUrlFeed, description, urldHd, smallUrl);
                     if (!subtitle.isEmpty())
                     {
-                        film.addSubtitle(new URI(subtitle));
+                        film.addSubtitle(new URL(subtitle));
                     }
                     addFilm(film);
                 }
-            } catch (Exception ex)
+            }
+            catch (final Exception ex)
             {
                 Log.errorLog(939584720, thema + ' ' + urlJson);
             }
@@ -312,7 +329,7 @@ public class MediathekSwr extends MediathekReader
         private String getTitle()
         {
             final String PATTERN_TITLE_START = "\"entry_title\":\"";
-            //final String MUSTER_TITEL_2 = "\"entry_title\":\"\\\"";
+            // final String MUSTER_TITEL_2 = "\"entry_title\":\"\\\"";
             return strSeite2.extract(PATTERN_TITLE_START, PATTERN_END);
         }
 
@@ -330,16 +347,17 @@ public class MediathekSwr extends MediathekReader
             {
                 if (datum.contains("."))
                 {
-                    if ((datum.substring(0, datum.indexOf('.'))).length() != 2)
+                    if (datum.substring(0, datum.indexOf('.')).length() != 2)
                     {
                         datum = '0' + datum;
                     }
                 }
                 if (datum.indexOf('.') != datum.lastIndexOf('.'))
                 {
-                    if ((datum.substring(datum.indexOf('.') + 1, datum.lastIndexOf('.'))).length() != 2)
+                    if (datum.substring(datum.indexOf('.') + 1, datum.lastIndexOf('.')).length() != 2)
                     {
-                        datum = datum.substring(0, datum.indexOf('.') + 1) + '0' + datum.substring(datum.indexOf('.') + 1);
+                        datum = datum.substring(0, datum.indexOf('.') + 1) + '0'
+                                + datum.substring(datum.indexOf('.') + 1);
                     }
                 }
             }
@@ -356,7 +374,7 @@ public class MediathekSwr extends MediathekReader
                 dur = strSeite2.extract(PATTERN_DURATION_START, PATTERN_END);
                 if (!dur.isEmpty())
                 {
-                    String[] parts = dur.split(":");
+                    final String[] parts = dur.split(":");
                     long power = 1;
                     for (int i = parts.length - 1; i >= 0; i--)
                     {
@@ -364,7 +382,8 @@ public class MediathekSwr extends MediathekReader
                         power *= 60;
                     }
                 }
-            } catch (NumberFormatException ex)
+            }
+            catch (final NumberFormatException ex)
             {
                 Log.errorLog(679012497, "duration: " + (dur == null ? " " : duration));
             }
@@ -393,7 +412,8 @@ public class MediathekSwr extends MediathekReader
                 {
                     if (time.substring(time.indexOf(':') + 1, time.lastIndexOf(':')).length() != 2)
                     {
-                        time = time.substring(0, time.indexOf(':') + 1) + '0' + time + time.substring(time.lastIndexOf(':'));
+                        time = time.substring(0, time.indexOf(':') + 1) + '0' + time
+                                + time.substring(time.lastIndexOf(':'));
                     }
                 }
             }
@@ -402,8 +422,9 @@ public class MediathekSwr extends MediathekReader
 
         private String getHDUrl()
         {
-            final String PATTTERN_PROT_HTTP_HD = "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"4\",\"val2\":\"http";
-            String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_HD, PATTERN_END);
+            final String PATTTERN_PROT_HTTP_HD =
+                    "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"4\",\"val2\":\"http";
+            final String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_HD, PATTERN_END);
             if (urlWithOutprot.isEmpty())
             {
                 return "";
@@ -413,8 +434,9 @@ public class MediathekSwr extends MediathekReader
 
         private String getNormalUrl()
         {
-            final String PATTTERN_PROT_HTTP_L = "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"3\",\"val2\":\"http";
-            String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_L, PATTERN_END);
+            final String PATTTERN_PROT_HTTP_L =
+                    "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"3\",\"val2\":\"http";
+            final String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_L, PATTERN_END);
             if (urlWithOutprot.isEmpty())
             {
                 return "";
@@ -440,8 +462,9 @@ public class MediathekSwr extends MediathekReader
 
         private String getSmallUrl()
         {
-            final String PATTTERN_PROT_HTTP_M = "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"2\",\"val2\":\"http";
-            String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_M, PATTERN_END);
+            final String PATTTERN_PROT_HTTP_M =
+                    "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"2\",\"val2\":\"http";
+            final String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_M, PATTERN_END);
             if (urlWithOutprot.isEmpty())
             {
                 return "";
@@ -451,8 +474,9 @@ public class MediathekSwr extends MediathekReader
 
         private String getSuperSmalUrl()
         {
-            final String PATTTERN_PROT_HTTP_S = "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"1\",\"val2\":\"http";
-            String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_S, PATTERN_END);
+            final String PATTTERN_PROT_HTTP_S =
+                    "\"entry_media\",\"attr\":{\"val0\":\"h264\",\"val1\":\"1\",\"val2\":\"http";
+            final String urlWithOutprot = strSeite2.extract(PATTTERN_PROT_HTTP_S, PATTERN_END);
             return HTTP + urlWithOutprot;
         }
 
